<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemActivity">

    <TextView
        android:id="@+id/itemNameTV"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:text="@string/lost_found_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/itemPhoneTV"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/phone"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemLocationTV"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/itemDescriptionTV"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:text="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemNameTV"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/itemDateTV"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/date"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDescriptionTV"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/itemLocationTV"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/location"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDateTV"
        app:layout_constraintVertical_bias="0.056" />

    <Button
        android:id="@+id/itemRemoveBtn"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:backgroundTint="@color/orange"
        android:text="@string/remove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPhoneTV"
        app:layout_constraintVertical_bias="0.338" />
</androidx.constraintlayout.widget.ConstraintLayout>