<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAdvertActivity">

    <TextView
        android:id="@+id/radioBtnTypeTV"
        android:layout_width="59dp"
        android:layout_height="22dp"
        android:text="@string/post_type"
        app:layout_constraintBottom_toTopOf="@+id/itemNameETV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532" />

    <RadioGroup
        android:id="@+id/radioBtnsGroup"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/itemNameETV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toEndOf="@+id/radioBtnTypeTV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.506">

        <RadioButton
            android:id="@+id/lostRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lost" />

        <RadioButton
            android:id="@+id/foundRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/found" />
    </RadioGroup>

    <EditText
        android:id="@+id/phoneETV"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/itemDescriptionETV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <fragment
        android:id="@+id/mapAutoCompleteETV"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        android:layout_width="350dp"
        android:layout_height="60dp"

        app:layout_constraintBottom_toTopOf="@+id/getItemCurrentLocationBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.967"
        tools:ignore="FragmentTagUsage" />

    <EditText
        android:id="@+id/itemDescriptionETV"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/itemDateETV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/getItemCurrentLocationBtn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/get_current_location"
        android:textSize="18sp"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/itemSaveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959" />

    <Button
        android:id="@+id/itemSaveBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/save"
        android:backgroundTint="@color/orange"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.895" />

    <EditText
        android:id="@+id/itemNameETV"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/phoneETV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/itemDateETV"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/mapAutoCompleteETV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>