<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/newAdvertBtn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/orange"
        android:textSize="18sp"
        android:text="@string/create_a_new_advert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <Button
        android:id="@+id/showMapBtn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/show_on_map"
        android:textSize="18sp"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showAllItemsBtn"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/showAllItemsBtn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:textSize="18sp"
        android:backgroundTint="@color/orange"
        android:text="@string/show_all_lost_found_items"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newAdvertBtn"
        app:layout_constraintVertical_bias="0.077" />

    <TextView
        android:id="@+id/firstAppTitleTV"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="LOST AND FOUND MAP"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/newAdvertBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

</androidx.constraintlayout.widget.ConstraintLayout>